# tinygrad-asr-qwen3

./: .gitignore  ENGINEERING.md  ENGINEERING_LOG.md  JITBEAM.md  README.md  TODO.md  asr.py  bench.py  chat.html  index.html  pyproject.toml  requirements.txt  server.py  sweep_params.py  test.py  test_session.py  test_stream_quality.py  test_ws.py  test_ws_browser.py  test_ws_page.html  tts.py  tts_vocoder.py
benchmarks/: bench_asr.py  bench_llm.py  bench_vocoder.py  sweep_params.py
tests/: test.py  test_quantized.py  test_session.py  test_stream_quality.py  test_tts.py  test_ws.py  test_ws_browser.py
tools/: convert_tts_gguf.py  convert_vocoder_gguf.py  jitbeam_diag.py
